fix: Internal lohogic  changed due to updated Quiz Review Logic